--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -361,6 +361,14 @@
     <string name="theme_nav_summary" translatable="false">When \"Custom Colors\" is enabled, apply the colors in your theme to the nav drawer.</string>
     <string name="clear">Clear</string>
     <string name="focus_summary" translatable="false">Hides system bars to minimize distraction.</string>
+    <string name="shape">Shape</string>
+    <string name="style">Style</string>
+    <string name="editor_options">Options</string>
+    <string name="editor_save">Save</string>
+    <string name="editor_import">Import</string>
+    <string name="saved_themes">Saved Themes</string>
+    <string name="editor_reset">Reset</string>
+    <string name="advanced_options">Advanced Options</string>
 
 
 </resources>
