--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -26,10 +26,10 @@
     <string name="term_menu_item" translatable="false">Tema</string>
     <string name="unsaved_confirmation">¿Desea aplicar sus cambios al tema actual?</string>
     <string name="twitter_title">Icono De Twitter por \"Pixel Perfect\"</string>
-    <string name="apache_licenses">Licencias Apache 2.0</string>
+    <string name="apache_licenses">Licencias Apache 2.0:</string>
     <string name="functions">Funciones</string>
     <string name="image_attributions">Atribuciones de Imagen:</string>
-    <string name="constants">CONSTANTES</string>
+    <string name="constants">Constantes</string>
     <string name="new_constant">Nueva Constante</string>
     <string name="new_function">Nueva Función</string>
     <string name="importNew">Importar</string>
