--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -363,7 +363,7 @@
     <string name="style_color">Style &amp; Color</string>
     <string name="style">Style</string>
     <string name="color">Color</string>
-    <string name="accent_color">Color</string>
+    <string name="accent_color">Accent Color</string>
     <string name="editor_options">Options</string>
     <string name="editor_save">Save</string>
     <string name="saved_themes">Saved Themes</string>
