--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,6 +35,8 @@
     <string name="importNew">Importar</string>
     <string name="clear">Borrar</string>
     <string name="shape">Forma</string>
+    <string name="shape_square">Cuadrado</string>
+    <string name="shape_round">Redondo</string>
     <string name="advanced_options">Opciones Avanzadas</string>
     <string name="editor_options">Opciones</string>
     <string name="editor_save">Guardar</string>
