--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -45,4 +45,9 @@
     <string name="style_color">Estilo y Color</string>
     <string name="style">Estilo</string>
     <string name="color">Color</string>
+    <string name="dark">Dark</string>
+    <string name="light">Light</string>
+    <string name="black">Black</string>
+    <string name="midnight">Midnight</string>
+    <string name="monochrome">Monochrome</string>
 </resources>
