--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -370,6 +370,11 @@
     <string name="saved_themes">Saved Themes</string>
     <string name="editor_reset">Reset to Defaults</string>
     <string name="advanced_options">Advanced Options</string>
+    <string name="dark">Dark</string>
+    <string name="light">Light</string>
+    <string name="black">Black</string>
+    <string name="midnight">Midnight</string>
+    <string name="monochrome">Monochrome</string>
 
 
 </resources>
