--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -50,4 +50,5 @@
     <string name="black">Black</string>
     <string name="midnight">Midnight</string>
     <string name="monochrome">Monochrome</string>
+    <string name="custom">Custom</string>
 </resources>
