--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -34,7 +34,7 @@
     <string name="new_function">Nueva Función</string>
     <string name="importNew">Importar</string>
     <string name="clear">Borrar</string>
-    <string name="shape">Forma</string>
+    <string name="shape">Forma de Botón</string>
     <string name="shape_square">Cuadrado</string>
     <string name="shape_round">Redondo</string>
     <string name="advanced_options">Opciones Avanzadas</string>
