--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,4 +51,5 @@
     <string name="midnight">Midnight</string>
     <string name="monochrome">Monochrome</string>
     <string name="custom">Custom</string>
+    <string name="new_theme">Tema Nueva</string>
 </resources>
