--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,4 +52,8 @@
     <string name="monochrome">Monochrome</string>
     <string name="custom">Custom</string>
     <string name="new_theme">Nuevo Tema</string>
+    <string name="keypad">KEYPAD</string>
+    <string name="primary">PRIMARY</string>
+    <string name="top_bar_right">TOP BAR (RIGHT)</string>
+    <string name="top_bar_left">TOP BAR (LEFT)</string>
 </resources>
