--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -46,18 +46,17 @@
     <string name="style_color">Estilo y Color</string>
     <string name="style">Estilo</string>
     <string name="color">Color</string>
-    <string name="dark">Dark</string>
-    <string name="light">Light</string>
-    <string name="black">Black</string>
-    <string name="midnight">Midnight</string>
-    <string name="monochrome">Monochrome</string>
-    <string name="custom">Custom</string>
+    <string name="dark">Oscuro</string>
+    <string name="light">Claro</string>
+    <string name="black">Negro</string>
+    <string name="midnight">Medianoche</string>
+    <string name="monochrome">Monocromo</string>
     <string name="new_theme">Nuevo Tema</string>
-    <string name="keypad">KEYPAD</string>
-    <string name="primary">PRIMARY</string>
-    <string name="top_bar_right">TOP BAR (RIGHT)</string>
-    <string name="top_bar_left">TOP BAR (LEFT)</string>
-    <string name="main_background">MAIN BACKGROUND</string>
+    <string name="keypad">TECLADO</string>
+    <string name="primary">PRIMARIO</string>
+    <string name="top_bar_right">BARRA SUP. (DERECHO)</string>
+    <string name="top_bar_left">BARRA SUPERIOR (IZQUIERDO)</string>
+    <string name="main_background">FONDO PRINCIPAL</string>
     <string name="theme_name">Nombre del Tema</string>
 
     <string name="backup_current_theme">Guardar Tema Actual</string>
