--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -20,7 +20,7 @@
     <string name="previous_versions">Versiónes Previas</string>
     <string name="changelog">Registro de Cambios</string>
     <string name="licenses_title">Licencias</string>
-    <string name="geometry">Geometry</string>
+    <string name="geometry">Geometría</string>
     <string name="area">ÁREA</string>
     <string name="volume">VOLUMEN</string>
     <string name="surface_area">ÁREA DE SUPERFICIE</string>
