--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -65,4 +65,7 @@
     <string name="terminal_intro_text">Escriba \"ayuda\" o \"?\" para obtener una lista de los comandos disponibles.\n</string>
     <string name="navigation_drawer_open">Abrir cajón de navegación</string>
     <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
+    <string name="contact_me">Contáctame:</string>
+    <string name="support_development">Apoyar Desarrollo:</string>
+    <string name="feedback">Retroalimentación:</string>
 </resources>
