--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -380,4 +380,5 @@
     <string name="contact_me">Contact Me:</string>
     <string name="support_development">Support Development:</string>
     <string name="feedback">Feedback:</string>
+    <string name="help">Help</string>
 </resources>
