--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,4 +68,5 @@
     <string name="contact_me">Contáctame:</string>
     <string name="support_development">Apoyar Desarrollo:</string>
     <string name="feedback">Retroalimentación:</string>
+    <string name="help">Ayuda</string>
 </resources>
