--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -381,4 +381,8 @@
     <string name="support_development">Support Development:</string>
     <string name="feedback">Feedback:</string>
     <string name="help">Help</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="last_week">Last Week</string>
+    <string name="older">Older</string>
 </resources>
