--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -385,4 +385,6 @@
     <string name="yesterday">Yesterday</string>
     <string name="last_week">Last Week</string>
     <string name="older">Older</string>
+    <string name="buttons">Buttons</string>
+    <string name="zones">Zones</string>
 </resources>
